--- a/packages/admin-dashboard/src/locales/en/permissions.json
+++ b/packages/admin-dashboard/src/locales/en/permissions.json
@@ -44,7 +44,7 @@
         "description": "Grants authority to Facet"
     },
     "Order": {
-        "title": "Ordering",
+        "title": "Order",
         "description": "Grants entitlement to order"
     },
     "PaymentMethod": {
