--- a/packages/admin-dashboard/src/locales/en/products.json
+++ b/packages/admin-dashboard/src/locales/en/products.json
@@ -62,8 +62,8 @@
         "createdAt": "Created in",
         "updatedAt": "Updated in",
         "name": "Name",
-        "slug": "Auger",
-        "variants": "# Number of variants",
+        "slug": "Snail",
+        "variants": "Number of options",
         "collections": "In collections",
         "inValueCollections": "In collections {{value}}",
         "openMenu": "Open menu",
@@ -111,7 +111,7 @@
     "details": {
         "addStockLocation": "Add stock location",
         "basicInfo": "Basic information",
-        "customFields": "Custom fields",
+        "customFields": "Non-standard fields",
         "facetValues": "Aspect value",
         "image": "Image",
         "price": "Price",
