--- a/packages/admin-dashboard/src/locales/en/table.json
+++ b/packages/admin-dashboard/src/locales/en/table.json
@@ -1,161 +1,189 @@
 {
-  "types": {
-    "filter": "Filter type",
-    "select": "Select type"
-  },
-  "withSelected": "After selecting {{amount}}",
-  "clearSelected": "Remove the selection",
-  "removeSelected": "Deselected",
-  "true": "True",
-  "false": "False",
-  "from": "From",
-  "to": "To",
-  "value": "Value",
-  "create": "Create",
-  "bulk": {
-    "delete": {
-      "title": "Are you sure you want to delete these records?",
-      "description": "This action cannot be undone.",
-      "cancel": "Cancel",
-      "confirm": "Delete {{amount}} records"
-    }
-  },
-  "filterLabels": {
-    "active": "Active",
-    "additionalInformation": "Additional information",
-    "code": "Code",
-    "createdAt": "Created in",
-    "currencyCode": "Currency code",
-    "customerLastName": "Customer name",
-    "id": "Id",
-    "orderPlacedAt": "Order placed at",
-    "shipping": "Shipping",
-    "shippingWithTax": "Shipping with tax",
-    "state": "Condition",
-    "subTotal": "Subtotal",
-    "subTotalWithTax": "Sub-total with tax",
-    "token": "Token",
-    "total": "total",
-    "totalQuantity": "Total quantity",
-    "totalWithTax": "Total including tax",
-    "transactionId": "Transaction identifier",
-    "type": "Type",
-    "updatedAt": "Updated by",
-    "aggregateOrderId": "Aggregate order identifier",
-    "getProforma": "Download proforma",
-    "registeredOnCheckout": "Registered at checkout",
-    "enabled": "Enabled",
-    "name": "Name",
-    "firstName": "Name",
-    "phoneNumber": "Telephone number",
-    "emailAddress": "E-mail address",
-    "slug": "Auger",
-    "description": "Description",
-    "isPrivate": "It is private",
-    "inheritFilters": "Filter inheritance",
-    "position": "Position",
-    "parentId": "Parent identifier",
-    "usedForProductCreations": "It is used to create products",
-    "usedForColors": "It is used for colours",
-    "colorsCollection": "Is a collection of colours",
-    "zone": "Zone",
-    "value": "Rate",
-    "customerGroup": "Customer group",
-    "category": "Category",
-    "modalTitle": "Modal title",
-    "_and": "and",
-    "_or": "or"
-  },
-  "buttons": {
-    "add": "Add",
-    "apply": "Use",
-    "create": "Create",
-    "reset": "Reset",
-    "cancel": "Cancel"
-  },
-  "operators": {
-    "eq": "Equals",
-    "in": "W",
-    "notIn": "Not in",
-    "isNull": "Is null",
-    "notEq": "Is not equal to",
-    "contains": "Contains",
-    "notContains": "Does not contain",
-    "before": "Before",
-    "regex": "Matches a regular expression",
-    "after": "After",
-    "between": "Between",
-    "lt": "Lower than",
-    "lte": "Lower or equal to",
-    "gt": "Greater than",
-    "gte": "Greater than or equal to"
-  },
-  "placeholders": {
-    "columnsDropdown": "Select columns",
-    "operatorInput": "Input value",
-    "search": "Search by {{fields}}"
-  },
-  "columns": {
-    "id": "ID",
-    "createdAt": "Created in",
-    "updatedAt": "Updated by",
-    "featuredAsset": "Assets",
-    "name": "Name",
-    "slug": "Auger",
-    "enabled": "Enabled",
-    "sku": "SKU",
-    "description": "Description",
-    "channels": "Channels",
-    "permissions": "Entitlements",
-    "price": "Price",
-    "priceWithTax": "Price with tax",
-    "verified": "Verified",
-    "fullName": "Name",
-    "payments": "Payments",
-    "shippingAddress": "Shipping address",
-    "customer": "Customer",
-    "state": "Status",
-    "totalWithTax": "Total",
-    "code": "Code",
-    "total": "Total",
-    "type": "Type",
-    "shipping": "Delivery",
-    "orderPlacedAt": "Submitted o",
-    "firstName": "Name",
-    "lastName": "Surname",
-    "emailAddress": "Email",
-    "phoneNumber": "Tel. no.",
-    "values": "Values",
-    "isPrivate": "Private",
-    "token": "Token",
-    "members": "Members",
-    "isDefault": "Default",
+    "types": {
+        "filter": "Filter type",
+        "select": "Select type"
+    },
+    "withSelected": "After selecting {{amount}}",
+    "clearSelected": "Remove the selection",
+    "removeSelected": "Deselected",
+    "true": "True",
+    "false": "False",
+    "from": "From",
+    "to": "To",
     "value": "Value",
-    "customerGroup": "Customer group",
-    "taxCategory": "Tax category",
-    "zone": "Zone",
-    "active": "Active",
-    "currencyCode": "Currency",
-    "totalQuantity": "Number"
-  },
-  "actionsMenu": {
-    "title": "Activities",
-    "open": "Open",
-    "copyId": "Copy ID",
-    "view": "View",
-    "delete": "Delete"
-  },
-  "filterDialog": {
-    "title": "Filters",
-    "apply": "Apply the filter",
-    "reset": "Reset filters",
-    "add": "Add filter",
-    "allFiltersApplied": "All filters have already been applied",
-    "where": "where",
-    "noFieldsFound": "No fields found",
-    "searchFields": "Search fields",
-    "noFiltersApplied": "No filters applied",
-    "emptyState": "Add filters to narrow the results.",
-    "operatorPlaceholder": "Selection operator"
-  }
+    "create": "Create",
+    "bulk": {
+        "delete": {
+            "title": "Are you sure you want to delete these records?",
+            "description": "This action cannot be undone.",
+            "cancel": "Cancel",
+            "confirm": "Delete {{amount}} records"
+        }
+    },
+    "filterLabels": {
+        "active": "Active",
+        "additionalInformation": "Additional information",
+        "code": "Code",
+        "createdAt": "Established in",
+        "currencyCode": "Currency code",
+        "customerLastName": "Customer name",
+        "id": "Id",
+        "orderPlacedAt": "Order placed at",
+        "shipping": "Shipping",
+        "shippingWithTax": "Shipping with tax",
+        "state": "State",
+        "subTotal": "Subtotal",
+        "subTotalWithTax": "Sub-total with tax",
+        "token": "Token",
+        "total": "total",
+        "totalQuantity": "Total quantity",
+        "totalWithTax": "Total incl. tax",
+        "transactionId": "Transaction ID",
+        "type": "Type",
+        "updatedAt": "Updated by",
+        "aggregateOrderId": "Aggregate order identifier",
+        "getProforma": "Download proforma",
+        "registeredOnCheckout": "Registered at checkout",
+        "enabled": "Included",
+        "name": "Name",
+        "firstName": "Name",
+        "phoneNumber": "Telephone number",
+        "emailAddress": "E-mail address",
+        "slug": "Snail",
+        "description": "Description",
+        "isPrivate": "It is private",
+        "inheritFilters": "Filter inheritance",
+        "position": "Position",
+        "parentId": "Parent identifier",
+        "usedForProductCreations": "It is used to create products",
+        "usedForColors": "It is used for colours",
+        "colorsCollection": "Is a collection of colours",
+        "zone": "Zone",
+        "value": "Rate",
+        "customerGroup": "Customer group",
+        "category": "Category",
+        "modalTitle": "Modal title",
+        "_and": "and",
+        "_or": "or"
+    },
+    "buttons": {
+        "add": "Add",
+        "apply": "Use",
+        "create": "Create",
+        "reset": "Reset",
+        "cancel": "Cancel"
+    },
+    "operators": {
+        "eq": "Equals",
+        "in": "W",
+        "notIn": "Not in",
+        "isNull": "Is null",
+        "notEq": "Not equal to",
+        "contains": "Contains",
+        "notContains": "Does not contain",
+        "before": "Before",
+        "regex": "Matches a regular expression",
+        "after": "After",
+        "between": "Between",
+        "lt": "Lower than",
+        "lte": "Lower or equal to",
+        "gt": "Greater than",
+        "gte": "Greater than or equal to"
+    },
+    "placeholders": {
+        "columnsDropdown": "Select columns",
+        "operatorInput": "Input value",
+        "search": "Search by {{fields}}"
+    },
+    "columns": {
+        "id": "ID",
+        "createdAt": "Established in",
+        "updatedAt": "Updated by",
+        "featuredAsset": "Assets",
+        "name": "Name",
+        "slug": "Snail",
+        "enabled": "Included",
+        "sku": "SKU",
+        "description": "Description",
+        "channels": "Channels",
+        "permissions": "Entitlements",
+        "price": "Price",
+        "priceWithTax": "Price with tax",
+        "verified": "Verified",
+        "fullName": "Name",
+        "payments": "Payments",
+        "shippingAddress": "Shipping address",
+        "customer": "Customer",
+        "state": "State",
+        "totalWithTax": "Total",
+        "code": "Code",
+        "total": "Total",
+        "type": "Type",
+        "shipping": "Delivery",
+        "orderPlacedAt": "Submitted o",
+        "firstName": "Name",
+        "lastName": "Surname",
+        "emailAddress": "Email",
+        "phoneNumber": "Tel. no.",
+        "values": "Values",
+        "isPrivate": "Private",
+        "token": "Token",
+        "members": "Members",
+        "isDefault": "Default",
+        "value": "Value",
+        "customerGroup": "Customer group",
+        "taxCategory": "Tax category",
+        "zone": "Zone",
+        "active": "Active",
+        "currencyCode": "Currency",
+        "totalQuantity": "Number",
+        "postalCode": "Postcode",
+        "image": "Image"
+    },
+    "actionsMenu": {
+        "title": "Activities",
+        "open": "Open",
+        "copyId": "Copy ID",
+        "view": "View",
+        "delete": "Delete"
+    },
+    "filterDialog": {
+        "title": "Filters",
+        "apply": "Apply the filter",
+        "reset": "Reset filters",
+        "add": "Add filter",
+        "allFiltersApplied": "All filters have already been applied",
+        "where": "where",
+        "noFieldsFound": "No fields found",
+        "searchFields": "Search",
+        "noFiltersApplied": "No filters applied",
+        "emptyState": "Add filters to narrow the results.",
+        "operatorPlaceholder": "Selection operator"
+    },
+    "entities": {
+        "administrator": "administrator",
+        "product": "products",
+        "customer": "customers",
+        "customerGroup": "customer groups",
+        "customerGroupList": "customer groups",
+        "productVariant": "product variants",
+        "collection": "collections",
+        "order": "orders",
+        "facet": "aspects of",
+        "channel": "channels",
+        "globalSettings": "global settings",
+        "role": "roles",
+        "admin": "administrators",
+        "stock": "storage locations",
+        "seller": "retailers",
+        "asset": "assets",
+        "zone": "zones",
+        "promotion": "promotions",
+        "country": "countries",
+        "paymentMethod": "payment methods",
+        "shippingMethod": "shipping methods",
+        "taxCategory": "tax categories",
+        "taxRate": "tax rates",
+        "stockLocation": "storage locations"
+    }
 }
