--- a/packages/admin-dashboard/src/locales/en/channels.json
+++ b/packages/admin-dashboard/src/locales/en/channels.json
@@ -12,10 +12,10 @@
         "id": "Id",
         "code": "Code",
         "token": "Token",
-        "createdAt": "Created in",
+        "createdAt": "Established in",
         "updatedAt": "Updated by",
         "openMenu": "Open menu",
-        "copyId": "Copy ID",
+        "copyId": "Copy identifier",
         "viewChannel": "Display channel",
         "columns": "Columns"
     },
@@ -24,7 +24,7 @@
             "title": "Basic information",
             "code": "Code",
             "token": "Token",
-            "seller": "Vendor",
+            "seller": "Seller",
             "languages": "Available languages",
             "languagePlaceholder": "Add language",
             "currencies": "Available currencies",
@@ -54,7 +54,7 @@
         "successMessage": "The channel has been removed.",
         "deleteOrCancel": "Delete/Cancel option selected"
     },
-    "selectedValue": "{{from}} of {{to}} lines was selected",
+    "selectedValue": "{{from}} of {{to}} lines selected",
     "validation": {
         "codeRequired": "The code is required",
         "tokenRequired": "Token required",
