--- a/packages/admin-dashboard/src/locales/en/collections.json
+++ b/packages/admin-dashboard/src/locales/en/collections.json
@@ -1,6 +1,6 @@
 {
     "create": "Create a collection",
-    "edit": "Edit the collection",
+    "edit": "Edit collection",
     "baseInfoCode": "Code: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Created: {{value}}",
@@ -18,25 +18,25 @@
         "featuredAsset": "Image",
         "breadcrumb": "Path",
         "slug": "Snail",
-        "children": "# Number of children",
+        "children": "Number of children",
         "collections": "In collections",
         "actions": "Activities",
         "copyId": "Copy id",
-        "products": "# number of products",
-        "delete": "Remove collection"
+        "products": "number of products",
+        "delete": "Delete a collection"
     },
     "details": {
         "basic": {
             "title": "Basic information",
             "name": "Name",
-            "slug": "Auger",
+            "slug": "Snail",
             "isPrivate": "It is private",
             "description": "Description"
         },
         "filters": {
             "title": "Filters",
             "inherit": "Filter inheritance",
-            "condition": "Status",
+            "condition": "State",
             "addCondition": "Add condition",
             "addFacets": "Adding aspect values"
         },
@@ -55,13 +55,13 @@
         "collectionCreatedSuccess": "The collection was successfully created",
         "collectionCreatedError": "Collection could not be created",
         "collectionDeleteSuccess": "Collection was successfully deleted",
-        "collectionDeleteError": "Collection could not be deleted successfully",
+        "collectionDeleteError": "Failed to delete collection",
         "deletionCollectionErrorToast": "Failed to delete collection",
         "deletionCollectionSuccessToast": "Collections were successfully deleted",
         "noCollectionChildrens": "collection {{collection}} has no children"
     },
     "deleteCollection": {
-        "title": "Delete collection",
+        "title": "Delete a collection",
         "description": "Are you sure you want to delete this collection?",
         "successMessage": "The collection has been removed.",
         "deleteOrCancel": "Delete/Cancel option selected"
@@ -72,7 +72,7 @@
     "rowsSelected": "{{selected}} of {{all}} selected rows",
     "duplicateCollection": "Are you sure you want to duplicate these collections?",
     "collectionActions": {
-        "move": "Transfer",
+        "move": "Move",
         "copy": "Duplicate",
         "assign": "Assign to channel",
         "deleteFromChannel": "Remove from current channel"
@@ -97,10 +97,10 @@
         }
     },
     "deleteCollectionDialog": {
-        "button": "Delete collection",
+        "button": "Delete a collection",
         "title": "Are you sure?",
         "description": "The collection will be permanently deleted.",
-        "confirm": "Delete collection",
+        "confirm": "Delete a collection",
         "cancel": "Cancel"
     },
     "deleteCollectionsFromChannel": {
@@ -111,7 +111,7 @@
         "removeError": "Cannot delete a collection from a feed"
     },
     "moveCollectionsToChannels": {
-        "moveCollections": "Moving a collection",
+        "moveCollections": "Transferring collections",
         "move": "Move",
         "selected": "Selected",
         "availableChannels": "Available channels",
@@ -129,7 +129,7 @@
     "moveCollectionsToCollections": {
         "targetCollection": "Target collection",
         "searchByName": "Search by name...",
-        "move": "Transfer",
+        "move": "Move",
         "selected": "Selected",
         "moveCollections": "Transferring collections",
         "movedAllCollections": "All collections transferred",
