--- a/packages/admin-dashboard/src/locales/pl/orders.json
+++ b/packages/admin-dashboard/src/locales/pl/orders.json
@@ -25,6 +25,7 @@
   "total": "Razem",
   "totalItems": "Łączna cena {{value}} produktów",
   "addPaymentInfo": "Dodaj płatność, by przejść dalej",
+  "markFulfillmentInfo": "Oznacz realizację jako dostarczoną lub anuluj",
   "deleteDraft": {
     "button": "Usuń wersję roboczą",
     "title": "Czy na pewno?",
@@ -287,7 +288,7 @@
       "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
       "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
       "countrySelectLabel": " Kraj:",
-      "phoneNumberShort": "tel.{{value}}",
+      "phoneNumberShort": "tel. {{value}}",
       "isDefaultBilling": "Domyślny adres wysyłki",
       "isDefaultShipping": "Domyślny adres rozliczeniowy",
       "createForCustomer": "Utwórz dla klienta",
@@ -505,7 +506,7 @@
     "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
     "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
     "countrySelectLabel": " Kraj:",
-    "phoneNumberShort": "tel.{{value}}",
+    "phoneNumberShort": "tel. {{value}}",
     "isDefaultBilling": "Domyślny adres wysyłki klienta",
     "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
     "createForCustomer": "Utwórz dla klienta",
@@ -607,6 +608,8 @@
     "trackingCode": "Kod śledzenia",
     "actions": "Działania",
     "markAsDelivered": " Oznacz jako dostarczoną",
+    "markAllAsDelivered": "Oznacz wszystkie jako dostarczone",
+    "allDelivered": "Wszystkie przesyłki dostarczone",
     "cancel": "Anuluj",
     "states": {
       "shipped": "Wysłana",
